상대 단위 작성

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../src/styles/reset.css" />
+    <link rel="stylesheet" href="../src/styles/common.css" />
+    <link rel="stylesheet" href="../src/styles/index.css" />
     <title>CSSPractice</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="nav">
+        <ul class="menu_list">
+          <li class="menu_item">좌측메뉴</li>
+          <li class="menu_item">우측메뉴</li>
+        </ul>
+      </nav>
+    </header>
+    <div class="em_container"></div>
+    <div class="rem_container"></div>
+    <div class="vw_container"></div>
+  </body>
 </html>
