aspect-ratio 알아보기

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,16 @@
     <div class="em_container"></div>
     <div class="rem_container"></div>
     <div class="vw_container"></div>
+		<!-- <div class="container">
+
+			<img class="container_img" src="https://www.aplayz.co.kr/media/images/home/section4_card3_img1_tablet.png" alt="">
+		</div>
+		<div class="container">
+			<img class="container_img" src="https://www.aplayz.co.kr/media/images/home/section4_card3_img1.png">
+		</div> -->
+
+		<div class="parent">
+			<img class="child_img" src="https://www.aplayz.co.kr/media/images/home/section4_card3_img1.png">
+		</div>
   </body>
 </html>
